--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,15 +18,15 @@ jobs:
         
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: src
+      working-directory: dotnet
       
     - name: Build
       run: dotnet build --no-restore
-      working-directory: src
+      working-directory: dotnet
       
     - name: Publish
       run: dotnet publish -o out
-      working-directory: src
+      working-directory: dotnet
       
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
