Update dotnet.yml for Azure Pipelines

--- a/_pipelines/dotnet.yml
+++ b/_pipelines/dotnet.yml
@@ -20,6 +20,6 @@ steps:
 
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: '$(Pipeline.Workspace)/dotnet/out'
+    targetPath: 'dotnet/out'
     artifact: 'binaries'
     publishLocation: 'pipeline'
