--- a/.github/workflows/blazor.yml
+++ b/.github/workflows/blazor.yml
@@ -32,4 +32,4 @@ jobs:
       uses: actions/upload-artifact@v3.1.0
       with:
         name: binaries
-        path: dotnet/out/wwwroot
+        path: blazor/out
