Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,6 @@ steps:
 
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: 'dotnet/out/wwwroot'
+    targetPath: 'blazor/out'
     artifact: 'binaries'
     publishLocation: 'pipeline'
